SUBDIRS =		\
	737		\
	A320		\
	B747		\
	LM		\
	OV10		\
	SGS		\
	T38		\
	X15		\
	c172p		\
	c172r		\
	c172x		\
	c182		\
	c310		\
	f15		\
	f16		\
	f22		\
	f104		\
	fokker50	\
	fokker100	\
	minisgs		\
	mk82		\
	p51d		\
	pa28		\
	paraglider	\
	sgs126		\
	shuttle		\
	t6texan2	\
	x24b

EXTRA_DIST = \
	aircraft_template.xml
