SUBDIRS =		\
	737		\
	A320		\
	B747		\
	OV10		\
	SGS		\
	T37		\
	T38		\
	X15		\
	ball \
	c172p		\
	c172r		\
	c172x		\
	c182		\
	c310		\
	f15		\
	f16		\
	f22		\
	f104		\
	fokker50	\
	fokker100	\
	minisgs		\
	mk82		\
	p51d		\
	pa28		\
	paraglider	\
	sgs126		\
	shuttle		\
	Submarine_Scout \
	t6texan2	\
	x24b

