SUBDIRS =		\
	737		\
	A320		\
	B17   \
	B747		\
	F4N	\
	OV10		\
	SGS		\
	Short_S23	\
	T37		\
	T38		\
	X15		\
	ball \
	c172p		\
	c172r		\
	c172x		\
	c182		\
	c310		\
	f15		\
	f16		\
	f22		\
	f104		\
	fokker50	\
	fokker100	\
	minisgs		\
	mk82		\
	p51d		\
	pa28		\
	paraglider	\
	sgs126		\
	Submarine_Scout \
        Shuttle         \
	t6texan2	\
	x24b

