EXTRA_DIST = \
	CFM56.xml \
	CFM56_5.xml \
	CFM56.xml \
	GE-CF6-80C2-B1F.xml \
	F119-PW-1.xml \
	J69-T25.xml \
	J85-GE-5.xml \
	J85-GE-5.xml \
	LM_descent_nozzle.xml \
	LMdescent.xml \
	PT6A-68.xml \
	PW125B.xml \
	R-1820-97.xml \
	T76.xml \
	Tay-651.xml \
	XLR99.xml \
	direct.xml \
	engIO360C.xml \
	engIO470D.xml \
	engIO540AB1A5.xml \
	eng_PegasusXc.xml \
	eng_io320.xml \
	prop30FP2B.xml \
	propC10v.xml \
	propC6v.xml \
	propC8v.xml \
	prop_Clark_Y7570.xml \
	prop_deHavilland5000.xml \
	propDA-R352_6-123-F_2.xml \
	propHS139v.xml \
	prop_75in2f.xml \
	prop_81in2v.xml \
	prop_generic2f.xml \
	xlr99_nozzle.xml
