lib_LIBRARIES = libFCSComponents.a

INCLUDES = \
	-Wall

libFCSComponents_a_SOURCES = \
	FGDeadBand.cpp \
	FGDeadBand.h \
	FGFCSComponent.cpp \
	FGFCSComponent.h \
	FGFilter.cpp \
	FGFilter.h \
	FGFlaps.cpp \
	FGFlaps.h \
	FGGain.cpp \
	FGGain.h \
	FGGradient.cpp \
	FGGradient.h \
	FGSummer.cpp \
	FGSummer.h \
	FGSwitch.cpp \
	FGSwitch.h
