INCLUDES = -I$(top_srcdir)

noinst_LIBRARIES = libFCSComponents.a

libFCSComponents_a_SOURCES = \
	FGDeadBand.cpp \
	FGFCSComponent.cpp \
	FGFilter.cpp \
	FGKinemat.cpp \
	FGGain.cpp \
	FGGradient.cpp \
	FGSummer.cpp \
	FGSwitch.cpp \
	FGCondition.cpp

noinst_HEADERS = \
	FGDeadBand.h \
	FGFCSComponent.h \
	FGFilter.h \
	FGKinemat.h \
	FGGain.h \
	FGGradient.h \
	FGSummer.h \
	FGSwitch.h \
	FGCondition.h
