[build-system]
# Exclude Cython version 0.29.26 as it fails building wheels for PyPy38
# Require setuptools 72.1.0 for PyPy (see issue #2676 on pypa/cibuildwheel
# GitHub project page)
requires = [
    "setuptools==72.1.0; platform_python_implementation == 'PyPy' and python_version < '3.11'",
    "setuptools", "cython!=0.29.26"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
enable = ["pypy", "pypy-eol"]
# Skip building against musl libc images as JSBSim is not compatible with them.
skip = "cp*-musllinux_*"
