EXTRA_DIST = \
  B747-1.xml \
  B747_script1.xml \
  StellarJ_Fly.xml \
  T37.xml \
  T38.xml \
  ball.xml \
  blank.xml \
  c1721.xml \
  c1722.xml \
  c1723.xml \
  c172_cruise_8K.xml \
  c3101.xml \
  cannonball.xml \
  plotfile.xml \
  kml_output.xml \
  Prefix.kml \
  Postfix.kml \
  x151.xml \
  x152.xml \
  f16_runway_test.xml
