EXTRA_DIST = \
  B747_script1.xml \
  Short_S23_1.xml \
  T37.xml \
  T38.xml \
  ball_chute.xml \
  blank.xml \
  c1721.xml \
  c1722.xml \
  c1723.xml \
  c172_cruise_8K.xml \
  c3101.xml \
  c3104.xml \
  cannonball.xml \
  plotfile.xml \
  kml_output.xml \
  Prefix.kml \
  Postfix.kml \
  x151.xml \
  x152.xml \
  f16_runway_test.xml \
  c172_elevation_test.xml
